; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenccenc.c_ff_mov_cenc_write_sinf_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenccenc.c_ff_mov_cenc_write_sinf_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"sinf\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"frma\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"schm\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"cenc\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_mov_cenc_write_sinf_tag(%struct.TYPE_3__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @avio_tell(i32* %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @avio_wb32(i32* %10, i32 0)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @ffio_wfourcc(i32* %12, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @avio_wb32(i32* %14, i32 12)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @ffio_wfourcc(i32* %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i32*, i32** %5, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @avio_wl32(i32* %18, i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @avio_wb32(i32* %23, i32 20)
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @ffio_wfourcc(i32* %25, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @avio_wb32(i32* %27, i32 0)
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @ffio_wfourcc(i32* %29, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @avio_wb32(i32* %31, i32 65536)
  %33 = load i32*, i32** %5, align 8
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @mov_cenc_write_schi_tag(i32* %33, i32* %34)
  %36 = load i32*, i32** %5, align 8
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @update_size(i32* %36, i32 %37)
  ret i32 %38
}

declare dso_local i32 @avio_tell(i32*) #1

declare dso_local i32 @avio_wb32(i32*, i32) #1

declare dso_local i32 @ffio_wfourcc(i32*, i8*) #1

declare dso_local i32 @avio_wl32(i32*, i32) #1

declare dso_local i32 @mov_cenc_write_schi_tag(i32*, i32*) #1

declare dso_local i32 @update_size(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
